ca-12.6.1/nginx/templates/appmanager_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contentautomation-appmanager-ingress
  namespace: contentautomation
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "86400"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
    nginx.ingress.kubernetes.io/proxy-redirect-from: "http://"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: nginx-cert
  rules:
    - host: <HOSTNAME>
      http:
        paths:
          - path: /contentautomation
            pathType: Prefix
            backend:
              service:
                name: contentautomation-appmanager
                port:
                  number: 8521
