ca-12.6.1/nginx/templates/mobius_contentautomation_process_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobius-contentautomation-process-ingress
  namespace: contentautomation
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024m"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /contentautomation/process/$1
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: nginx-cert
  rules:
    - host: <HOSTNAME>
      http:
        paths:
          - path: /mobius/contentautomation/process/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: contentautomation-processengine
                port:
                  number: 8522
