ca-12.6.1/nginx/templates/mobiusview_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobiusingress
  namespace: <NAMESPACE>
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  ingressClassName: nginx
  rules:
 
  - host: <HOSTNAME>
    http:
      paths:
      - backend:
          service:
            name: mobiusview
            port:
              number: 80
        path: /mobius/
        pathType: Prefix
  tls:
    - hosts:
      - <HOSTNAME>
      secretName: nginx-cert
