ca-12.6.1/nginx/templates/studio_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: contentautomation-studio-ingress
  namespace: contentautomation
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - admin'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - localhost
      secretName: nginx-cert
  rules:
    - host: <HOSTNAME>
      http:
        paths:
          - path: /contentautomation/studio/
            pathType: Prefix
            backend:
              service:
                name: contentautomation-studio
                port:
                  number: 8082
